--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
+	<div id="app"></div>
 
-<script src=""></script>
+<script src="fullstack-game.1.0.0.js"></script>
 </body>
 </html>
