--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 
 	<div id="app"></div>
-
+	
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="fullstack-game.1.0.0.js"></script>
 </body>
 </html>
