--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 	<title>Untitled Greatest Game of All Time Project</title>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 	<div id="app"></div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="fullstack-game-frontend.1.0.0.js"></script>
 </body>
 </html>
