Debugs tile accumulation bug

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Untitled Greatest Game of All Time Project</title>
+	<title>The Ultimate Tile Destroyer</title>
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="style.css">
