updates name and urls in package.json

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
 	<div id="app"></div>
-<script src="fullstack-game-frontend.1.0.0.js"></script>
+<script src="tile-destroyer.1.0.0.js"></script>
 </body>
 </html>
